<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.jlehocz.londonscoresheet.MainActivity">

    <LinearLayout
        android:id="@+id/parentLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/playersLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/colorSecondaryAccent"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/redPlayerLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/playerName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/red_player" />

                <TextView
                    android:id="@+id/red_player_score"
                    style="@style/playerScore"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="0" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/BluePlayerLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/playerName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/blue_player" />

                <TextView
                    android:id="@+id/blue_player_score"
                    style="@style/playerScore"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="0" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/scoresLayout"
            style="@style/scoresLayout">

            <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/layout1"
                    style="@style/buttonsLayout">

                    <LinearLayout style="@style/buttonLayout">

                        <Button
                            style="@style/AppTheme.buttonScore"
                            android:onClick="increaseRedPovertyPoints"
                            android:text="@string/cards_in_hand" />

                        <Button
                            style="@style/AppTheme.buttonScore"
                            android:onClick="increaseRedMoney"
                            android:text="@string/money" />

                        <Button
                            style="@style/AppTheme.buttonScore"
                            android:onClick="increaseRedBuildings"
                            android:text="@string/buildings" />

                        <Button
                            style="@style/AppTheme.buttonScore"
                            android:onClick="increaseRedUndergrounds"
                            android:text="@string/undergrounds" />

                        <Button
                            style="@style/AppTheme.buttonScore"
                            android:onClick="increaseRedCardDisplay"
                            android:text="@string/cards_in_building_display" />

                        <Button
                            style="@style/AppTheme.buttonScore"
                            android:onClick="increaseRedHand"
                            android:text="@string/victory_points_in_hand" />

                        <Button
                            style="@style/AppTheme.buttonScore"
                            android:onClick="decreaseRedLoan"
                            android:text="@string/unpaid_loan" />

                        <Button
                            style="@style/AppTheme.buttonScore"
                            android:onClick="increaseRedPovertyPoints"
                            android:text="@string/poverty_points" />
                    </LinearLayout>

                    <View style="@style/dividerLine" />

                    <LinearLayout style="@style/buttonLayout">

                        <Button
                            style="@style/AppTheme.buttonScore"
                            android:onClick="increaseBluePovertyPoints"
                            android:text="@string/cards_in_hand" />

                        <Button
                            style="@style/AppTheme.buttonScore"
                            android:onClick="increaseBlueMoney"
                            android:text="@string/money" />

                        <Button
                            style="@style/AppTheme.buttonScore"
                            android:onClick="increaseBlueBuildings"
                            android:text="@string/buildings" />

                        <Button
                            style="@style/AppTheme.buttonScore"
                            android:onClick="increaseBlueUndergrounds"
                            android:text="@string/undergrounds" />

                        <Button
                            style="@style/AppTheme.buttonScore"
                            android:onClick="increaseBlueCardDisplay"
                            android:text="@string/cards_in_building_display" />

                        <Button
                            style="@style/AppTheme.buttonScore"
                            android:onClick="increaseBlueHand"
                            android:text="@string/victory_points_in_hand" />

                        <Button
                            style="@style/AppTheme.buttonScore"
                            android:onClick="decreaseBlueLoan"
                            android:text="@string/unpaid_loan" />

                        <Button
                            style="@style/AppTheme.buttonScore"
                            android:onClick="increaseBluePovertyPoints"
                            android:text="@string/poverty_points" />
                    </LinearLayout>
                </LinearLayout>
            </ScrollView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/resetLayout"
            style="@style/resetLayout">

            <TextView
                android:id="@+id/red_player_poverty"
                style="@style/playerPoverty"
                android:text="0" />

            <Button
                style="@style/AppTheme.buttonReset"
                android:onClick="resetScore"
                android:text="@string/reset" />

            <TextView
                android:id="@+id/blue_player_poverty"
                style="@style/playerPoverty"
                android:text="0" />
        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
